--- a/demo/CRC/crc_data_analyse.ipynb
+++ b/demo/CRC/crc_data_analyse.ipynb
@@ -505,13 +505,401 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Synonym</th>\n",
+       "      <th>Structure</th>\n",
+       "      <th>Mol. form.</th>\n",
+       "      <th>CAS Reg. No.</th>\n",
+       "      <th>Beilstein Reg. No.</th>\n",
+       "      <th>Mol. wt.</th>\n",
+       "      <th>Physical form</th>\n",
+       "      <th>tmp/ºC</th>\n",
+       "      <th>tbp/ºC</th>\n",
+       "      <th>Other bp/ºC</th>\n",
+       "      <th>ρ/g cm-3</th>\n",
+       "      <th>nD</th>\n",
+       "      <th>s/g kg-1</th>\n",
+       "      <th>vp/kPa (25 °C)</th>\n",
+       "      <th>Solubility</th>\n",
+       "      <th>SMILES</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Abate</td>\n",
+       "      <td>Temephos</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C16H20O6P2S3</td>\n",
+       "      <td>3383-96-8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>466.469</td>\n",
+       "      <td>cry</td>\n",
+       "      <td>31.6(5)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sl H2O, hx; s ctc, eth, tol</td>\n",
+       "      <td>COP(=S)(OC)OC1=CC=C(C=C1)SC2=CC=C(C=C2)OP(=S)(...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abietic acid</td>\n",
+       "      <td>Sylvic acid</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C20H30O2</td>\n",
+       "      <td>514-10-3</td>\n",
+       "      <td>2221451.0</td>\n",
+       "      <td>302.451</td>\n",
+       "      <td>mcl pl (al-w)</td>\n",
+       "      <td>173.5</td>\n",
+       "      <td>439.5</td>\n",
+       "      <td>2509</td>\n",
+       "      <td>1.0625</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vs ace, bz, eth, EtOH</td>\n",
+       "      <td>CC(C)C1=CC2=CCC3C(C2CC1)(CCCC3(C)C(=O)O)C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abscisic acid</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C15H20O4</td>\n",
+       "      <td>21293-29-8</td>\n",
+       "      <td>2698956.0</td>\n",
+       "      <td>264.318</td>\n",
+       "      <td>cry (chl-peth)</td>\n",
+       "      <td>160</td>\n",
+       "      <td>120 subl</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vs ace, eth, chl</td>\n",
+       "      <td>CC1=CC(=O)CC(C1(C=CC(=CC(=O)O)C)O)(C)C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Acacetin</td>\n",
+       "      <td>5,7-Dihydroxy-2-(4-methoxyphenyl)-4H-1-benzopy...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C16H12O5</td>\n",
+       "      <td>480-44-4</td>\n",
+       "      <td>277879.0</td>\n",
+       "      <td>284.263</td>\n",
+       "      <td>ye nd (95% al)</td>\n",
+       "      <td>263</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vs EtOH</td>\n",
+       "      <td>COC1=CC=C(C=C1)C2=CC(=O)C3=C(C=C(C=C3O2)O)O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Acebutolol, (±)-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C18H28N2O4</td>\n",
+       "      <td>37517-30-9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>336.426</td>\n",
+       "      <td>cry</td>\n",
+       "      <td>121</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CCCC(=O)NC1=CC(=C(C=C1)OCC(CNC(C)C)O)C(=O)C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>Bis(2-hydroxy-3-tert-butyl-5-methylphenyl)methane</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C23H32O2</td>\n",
+       "      <td>119-47-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>340.499</td>\n",
+       "      <td>nd (peth)</td>\n",
+       "      <td>131</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CC1=CC(=C(C(=C1)C(C)(C)C)O)CC2=C(C(=CC(=C2)C)C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>Bis(2-hydroxy-5-chlorophenyl) sulfide</td>\n",
+       "      <td>Fenticlor</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C12H8Cl2O2S</td>\n",
+       "      <td>97-24-5</td>\n",
+       "      <td>2057140.0</td>\n",
+       "      <td>287.162</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>174</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>i H2O; s EtOH, eth, gl HOAc</td>\n",
+       "      <td>C1=CC(=C(C=C1Cl)SC2=C(C=CC(=C2)Cl)O)O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>2-[Bis(2-hydroxyethyl)amino]ethanol hydrochloride</td>\n",
+       "      <td>Triethanolamine hydrochloride</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C6H16ClNO3</td>\n",
+       "      <td>637-39-8</td>\n",
+       "      <td>3909940.0</td>\n",
+       "      <td>185.649</td>\n",
+       "      <td>cry (al)</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vs H2O</td>\n",
+       "      <td>C(CO)N(CCO)CCO.Cl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>N,N-Bis(2-hydroxyethyl)butylamine</td>\n",
+       "      <td>Butylbis(2-hydroxyethyl)amine</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C8H19NO2</td>\n",
+       "      <td>102-79-4</td>\n",
+       "      <td>1739642.0</td>\n",
+       "      <td>161.243</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>279(19)</td>\n",
+       "      <td>8035</td>\n",
+       "      <td>0.968120</td>\n",
+       "      <td>1.46252</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>s chl</td>\n",
+       "      <td>CCCCN(CCO)CCO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>Bis(2-hydroxyethyl) disulfide</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C4H10O2S2</td>\n",
+       "      <td>1892-29-1</td>\n",
+       "      <td>1735851.0</td>\n",
+       "      <td>154.251</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1603.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C(CSSCCO)O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>999 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Name  \\\n",
+       "Index                                                      \n",
+       "1                                                  Abate   \n",
+       "2                                           Abietic acid   \n",
+       "3                                          Abscisic acid   \n",
+       "4                                               Acacetin   \n",
+       "5                                       Acebutolol, (±)-   \n",
+       "...                                                  ...   \n",
+       "995    Bis(2-hydroxy-3-tert-butyl-5-methylphenyl)methane   \n",
+       "996                Bis(2-hydroxy-5-chlorophenyl) sulfide   \n",
+       "997    2-[Bis(2-hydroxyethyl)amino]ethanol hydrochloride   \n",
+       "998                    N,N-Bis(2-hydroxyethyl)butylamine   \n",
+       "999                        Bis(2-hydroxyethyl) disulfide   \n",
+       "\n",
+       "                                                 Synonym  Structure  \\\n",
+       "Index                                                                 \n",
+       "1                                               Temephos        NaN   \n",
+       "2                                            Sylvic acid        NaN   \n",
+       "3                                                    NaN        NaN   \n",
+       "4      5,7-Dihydroxy-2-(4-methoxyphenyl)-4H-1-benzopy...        NaN   \n",
+       "5                                                    NaN        NaN   \n",
+       "...                                                  ...        ...   \n",
+       "995                                                  NaN        NaN   \n",
+       "996                                            Fenticlor        NaN   \n",
+       "997                        Triethanolamine hydrochloride        NaN   \n",
+       "998                        Butylbis(2-hydroxyethyl)amine        NaN   \n",
+       "999                                                  NaN        NaN   \n",
+       "\n",
+       "         Mol. form. CAS Reg. No.  Beilstein Reg. No.  Mol. wt.  \\\n",
+       "Index                                                            \n",
+       "1      C16H20O6P2S3    3383-96-8                 NaN   466.469   \n",
+       "2          C20H30O2     514-10-3           2221451.0   302.451   \n",
+       "3          C15H20O4   21293-29-8           2698956.0   264.318   \n",
+       "4          C16H12O5     480-44-4            277879.0   284.263   \n",
+       "5        C18H28N2O4   37517-30-9                 NaN   336.426   \n",
+       "...             ...          ...                 ...       ...   \n",
+       "995        C23H32O2     119-47-1                 NaN   340.499   \n",
+       "996     C12H8Cl2O2S      97-24-5           2057140.0   287.162   \n",
+       "997      C6H16ClNO3     637-39-8           3909940.0   185.649   \n",
+       "998        C8H19NO2     102-79-4           1739642.0   161.243   \n",
+       "999       C4H10O2S2    1892-29-1           1735851.0   154.251   \n",
+       "\n",
+       "        Physical form   tmp/ºC    tbp/ºC Other bp/ºC  ρ/g cm-3       nD  \\\n",
+       "Index                                                                     \n",
+       "1                 cry  31.6(5)       NaN         NaN      1.32      NaN   \n",
+       "2       mcl pl (al-w)    173.5     439.5        2509    1.0625      NaN   \n",
+       "3      cry (chl-peth)      160  120 subl         NaN       NaN      NaN   \n",
+       "4      ye nd (95% al)      263       NaN         NaN       NaN      NaN   \n",
+       "5                 cry      121       NaN         NaN       NaN      NaN   \n",
+       "...               ...      ...       ...         ...       ...      ...   \n",
+       "995         nd (peth)      131       NaN         NaN       NaN      NaN   \n",
+       "996               NaN      174       NaN         NaN       NaN      NaN   \n",
+       "997          cry (al)    179.5       NaN         NaN       NaN      NaN   \n",
+       "998               NaN      NaN   279(19)        8035  0.968120  1.46252   \n",
+       "999               NaN       26       NaN      1603.5       NaN      NaN   \n",
+       "\n",
+       "      s/g kg-1  vp/kPa (25 °C)                   Solubility  \\\n",
+       "Index                                                         \n",
+       "1          NaN             NaN  sl H2O, hx; s ctc, eth, tol   \n",
+       "2          NaN             NaN        vs ace, bz, eth, EtOH   \n",
+       "3          NaN             NaN             vs ace, eth, chl   \n",
+       "4          NaN             NaN                      vs EtOH   \n",
+       "5          NaN             NaN                          NaN   \n",
+       "...        ...             ...                          ...   \n",
+       "995        NaN             NaN                          NaN   \n",
+       "996        NaN             NaN  i H2O; s EtOH, eth, gl HOAc   \n",
+       "997        NaN             NaN                       vs H2O   \n",
+       "998        NaN             NaN                        s chl   \n",
+       "999        NaN             NaN                          NaN   \n",
+       "\n",
+       "                                                  SMILES  \n",
+       "Index                                                     \n",
+       "1      COP(=S)(OC)OC1=CC=C(C=C1)SC2=CC=C(C=C2)OP(=S)(...  \n",
+       "2              CC(C)C1=CC2=CCC3C(C2CC1)(CCCC3(C)C(=O)O)C  \n",
+       "3                 CC1=CC(=O)CC(C1(C=CC(=CC(=O)O)C)O)(C)C  \n",
+       "4            COC1=CC=C(C=C1)C2=CC(=O)C3=C(C=C(C=C3O2)O)O  \n",
+       "5            CCCC(=O)NC1=CC(=C(C=C1)OCC(CNC(C)C)O)C(=O)C  \n",
+       "...                                                  ...  \n",
+       "995    CC1=CC(=C(C(=C1)C(C)(C)C)O)CC2=C(C(=CC(=C2)C)C...  \n",
+       "996                C1=CC(=C(C=C1Cl)SC2=C(C=CC(=C2)Cl)O)O  \n",
+       "997                                    C(CO)N(CCO)CCO.Cl  \n",
+       "998                                        CCCCN(CCO)CCO  \n",
+       "999                                           C(CSSCCO)O  \n",
+       "\n",
+       "[999 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Apply the function to each CAS number in the DataFrame\n",
     "df['SMILES'] = df['CAS Reg. No.'].apply(get_smiles_from_cas)\n",
     "\n",
     "# Display the DataFrame to verify changes\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('crc_data_50_with_smiles.csv')"
    ]
   },
   {
