--- a/demo/CRC/crc_data_analyse.ipynb
+++ b/demo/CRC/crc_data_analyse.ipynb
@@ -822,23 +822,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ind=8332\n",
-      "ind=6305\n",
-      "ind=10367\n",
-      "ind=4828\n",
-      "ind=1659\n",
-      "ind=4598\n",
-      "ind=1391\n",
-      "ind=1215\n",
-      "ind=3527\n",
-      "ind=671\n",
+      "ind=8372\n",
       "True\n"
      ]
     }
@@ -846,41 +837,41 @@
    "source": [
     "# random number between 0 and 10902\n",
     "val = []\n",
-    "for _ in range(10):\n",
+    "for _ in range(50):\n",
     "    ind = np.random.randint(0, 10902)\n",
-    "    print(f\"{ind=}\")\n",
     "    read_cas_number = df['CAS Reg. No.'].at[ind]\n",
     "    computed_smi = get_smiles_from_cas(read_cas_number)\n",
     "    read_smi = df['SMILES'].at[ind]\n",
-    "    val.append(read_smi == computed_smi)\n",
-    "    # print(f\"{ind=}\\n{read_smi}\\{computed_smi} = {val}\")\n",
-    "# display(Chem.MolFromSmiles(df['SMILES'].at[ind]))\n",
+    "    temp = read_smi == computed_smi\n",
+    "    if not temp:\n",
+    "        computed_smi = cirpy.resolve(df['CAS Reg. No.'].at[ind], 'smiles')\n",
+    "        time.sleep(1)\n",
+    "        temp = read_smi == computed_smi\n",
+    "        print(f\"{ind=}\")\n",
+    "    val.append(temp)\n",
     "\n",
     "print(np.array(val).all())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('CN(C)C(=S)[S-].CN(C)C(=S)[S-].[Zn+2]',\n",
-       " nan,\n",
-       " '137-30-4',\n",
-       " 'CN(C)C(=S)[S-].CN(C)C(=S)[S-].[Zn+2]')"
+       "('CCCCCCC(C)N', '44855-57-4', None, 'CCCCCCC(C)N')"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind = 10901\n",
-    "df['SMILES'].at[ind], df['SMILES'].iloc[ind], df['CAS Reg. No.'].at[ind], get_smiles_from_cas(df['CAS Reg. No.'].at[ind])"
+    "ind = 8372\n",
+    "df['SMILES'].at[ind], df['CAS Reg. No.'].at[ind], get_smiles_from_cas(df['CAS Reg. No.'].at[ind]), cirpy.resolve(df['CAS Reg. No.'].at[ind], 'smiles')"
    ]
   },
   {
