--- a/demo/CRC/crc_data_analyse.ipynb
+++ b/demo/CRC/crc_data_analyse.ipynb
@@ -824,7 +824,16 @@
    "cell_type": "code",
    "execution_count": 223,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ind=301\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# random number between 0 and 10902\n",
     "val = []\n",
@@ -846,22 +855,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('CCCCCCC(C)N', '44855-57-4', None, 'CCCCCCC(C)N')"
+       "('CCC(=O)O[C@]1(CCN(C)C[C@H]1C)c2ccccc2',\n",
+       " '15867-21-7',\n",
+       " None,\n",
+       " 'CCC(=O)O[C@]1(CCN(C)C[C@H]1C)c2ccccc2')"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind = 8372\n",
+    "ind = 214\n",
     "df['SMILES'].at[ind], df['CAS Reg. No.'].at[ind], get_smiles_from_cas(df['CAS Reg. No.'].at[ind]), cirpy.resolve(df['CAS Reg. No.'].at[ind], 'smiles')"
    ]
   },
@@ -1184,17 +1196,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "col = 'tmp/ºC'\n",
+    "df_mp = df[col][~df[col].isnull()]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'248'"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mp.at[10902]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index\n",
+       "1        COP(=S)(OC)OC1=CC=C(C=C1)SC2=CC=C(C=C2)OP(=S)(...\n",
+       "2                CC(C)C1=CC2=CCC3C(C2CC1)(CCCC3(C)C(=O)O)C\n",
+       "3                   CC1=CC(=O)CC(C1(C=CC(=CC(=O)O)C)O)(C)C\n",
+       "4              COC1=CC=C(C=C1)C2=CC(=O)C3=C(C=C(C=C3O2)O)O\n",
+       "5              CCCC(=O)NC1=CC(=C(C=C1)OCC(CNC(C)C)O)C(=O)C\n",
+       "                               ...                        \n",
+       "10896                               C[CH2-].C[CH2-].[Zn+2]\n",
+       "10897                      C(CNC(=S)[S-])NC(=S)[S-].[Zn+2]\n",
+       "10899                     CC(=CC(=O)C)O.CC(=CC(=O)C)O.[Zn]\n",
+       "10901                 CN(C)C(=S)[S-].CN(C)C(=S)[S-].[Zn+2]\n",
+       "10902                       Cl[Zr](Cl)(C1C=CC=C1)C2C=CC=C2\n",
+       "Name: SMILES, Length: 7982, dtype: object"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df_mp.index, 'SMILES']"
+   ]
   }
  ],
  "metadata": {
